  - enter them as e.g. "\epsilon", "\iota", "\phi" in the GUI.
  - use edgeData "variableWeight" to set them in R
    (see createGraph2FromBretzEtAl as an example).
  - epsilon has to be entered as "\epsilon" instead of "e"

- Below the graphPanel is now a new panel with 
  graph description and graph analysis. 

- Function placeNodes is now exported with new parameters:
  nrow, ncol and force

- New example graphs:

  - Fixed sequence test
  
  - Fallback procedure
  
  - Improved fallback procedure
  
  - Truncated Holm procedure
  
  - Successive graphs
  
  - Graphs from Hung and Wang (2010), Bauer et al. (2001), 
    Bretz et al. (2011), Bretz et al. (2009) and 
    Hommel et al. (2007)

- Example graphs have a description and
  graph attributes "description" are shown in the GUI

- Improved compatibility for R 2.8

- New HTML file References.html accessible from the GUI.

Version 0.6-2 (16-Apr-2011, Rev. 679)
=====================================

- New dependency: xtable 

- Indefinite ProgressPanel is shown while calculating.

- Calculations can be interrupted and canceled.

- Improved / updated gMCP-LaTeX-Report now in the GUI.

- New function: graphAnalysis

- Fixed a major bug which prevented saving/loading in the GUI.

- Mnemonic keys for the menu.

- Buttons for loading estimates / sd from R in CI-dialog.

- Improved zoom with TeXItem edge labels.

- Menu entry for loading p-values.

- Fixed visualization bug: 
  Panel with p-values was sometimes out of sync.

- Fixed bug: Edges with very small values were set to 0.

- Fixed visualization bug: 
  Adjacency table was not updated when edge was deleted.
  
- GUI deals a lot better with rounding errors.  


Version 0.6-1 (09-Apr-2011, Rev. 589)
=====================================

- We use the library JLaTeXMath for edge labeling.

- Eye candy (for example the edge labels have now a border and 
  are always drawn at the end).
  
- The settings for correlation are moved to the p-value panel.
