@@ -6,7 +6,7 @@ Author: Kornelius Rohmeyer, Florian Klinglmueller
 Maintainer: Kornelius Rohmeyer <rohmeyer@small-projects.de>
 Description: This package provides functions and a graphical user interface for graphical described multiple test procedures.
 Depends: R (>= 2.8.0), rJava (>= 0.6-3), methods, MASS, PolynomF, multcomp (>= 1.1), graph (>= 1.20), xtable, gtools (>= 2.5.0), JavaGD, plotrix
-Suggests: RUnit, Deducer, mutoss
+Suggests: RUnit, Deducer, highlight, mutoss
 SystemRequirements: Java (>= 5.0) 
 License: GPL (>= 2)
 LazyLoad: yes
