@@ -15,6 +15,11 @@ Version 0.6-3 (??-???-2011, Rev. ???)
 
 - Function placeNodes is now exported with new parameters:
   nrow, ncol and force
+  
+- Graphs without epsilon edges can be processed by a
+  much faster procedure written in C
+  
+- We use package highlight for the manuals.
 
 - New example graphs:
 
